# surogate

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  2026-06-20-dispatch-pp-design.md  2026-06-20-dispatch-pp-planner-and-phase0.md  2026-06-21-dispatch-pp-phase1-streaming.md  2026-06-21-dispatch-pp-stage-level-rewrite.md  2026-06-22-dispatch-pp-recompute-false.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.cu128  Dockerfile.cu129  Dockerfile.cu130  Makefile  README.md  REFACTOR.md  REFACTOR_COMPLETION_PLAN.md  UNIFIED_IMPLEMENTATION_PLAN.md  autotune-help.md  autotune.md  autotuned_gemm_fused_mlp_fa3.md  bf16_scaling_analysis.md  bf16_scaling_analysis_claude.md  install-sglang.sh  install-vllm.sh  install.sh  load_test.py  memorization_dataset_all.jsonl  pyproject.toml  release-please-config.json  requirements-torch.txt  requirements.txt  run_unsloth.py  setup.py  surogate.cli.main  surogate.eval.config.parser  train.sh
csrc/: CMakeLists.txt
csrc/src/: train.cpp
csrc/src/binding/: binding.cpp  py_train.cpp  py_train.h
csrc/src/config/: lora_adapter_config.h  pretrained_config.cpp  pretrained_config.h  rope_config.h
csrc/src/dsl/: autodiff.cpp  autodiff.h  autodiff_rules.cpp  compiled_ops.cpp  compiled_ops.h  compiled_ops_helpers.h  dsl_grad_store.cpp  dsl_grad_store.h  dsl_model.cpp  dsl_model.h  dsl_model_execution.cpp  dsl_model_helpers.cpp  dsl_model_internal.h  dsl_model_lora.cpp  dsl_model_optimizer.cpp  dsl_model_weights.cpp  dsl_param_store.cpp  dsl_param_store.h  dsl_run_state.cpp  dsl_run_state.h  dsl_runtime.cpp  dsl_runtime.h  dsl_weight_manager.cpp  dsl_weight_manager.h  graph_compiler.cpp  graph_compiler.h  graph_executor.cpp  graph_executor.h  graph_executor_backward.cpp  graph_executor_forward.cpp  graph_executor_helpers.cpp  graph_executor_helpers.h  graph_executor_impl.h  graph_executor_internal.h  graph_executor_tensors.cpp  graph_executor_tensors.h  graph_executor_utils.cpp  graph_executor_utils.h  graph_executor_weight_cache.cpp  ir.cpp  (+11 more)
csrc/src/dsl/ops/: add.cpp  bias_add.cpp  cross_entropy_loss.cpp  embedding.cpp  flash_attention.cpp  fused_lm_head_loss.cpp  fused_residual_rmsnorm.cpp  matmul.cpp  matmul_swiglu.cpp  moe_grouped_gemm_down.cpp  moe_grouped_gemm_gate_up.cpp  moe_permute.cpp  moe_sigmoid.cpp  moe_softmax.cpp  moe_topk.cpp  moe_unpermute.cpp  mul.cpp  qkv_qk_norm_rope.cpp  rope.cpp  silu.cpp  swiglu.cpp  view.cpp  zeros.cpp
csrc/src/kernels/: activation.cu  attention.cu  attention_decode.cpp  attention_decode.h  attention_decode_flashinfer.cu  attention_decode_fp8.cu  attention_decode_kernels.cu  attention_decode_tq.cu  attention_decode_tq.cuh  attention_decode_tq.h  attention_flat_paged.cu  attention_flat_paged.h  bias.cu  block_quant.cu  bnb_quant.cu  convert.cu  cudnn_att.cpp  encoder.cu  ep_dispatch.cu  fast_lora_silu.cu  fill.cu  flash_attn_scatter.cu  flash_attn_varlen.cpp  fused_classifier.cu  gated_delta_rule_v2.cu  gated_delta_rule_v2_bwd.cu  gated_delta_rule_v2_fwd.cu  gelu_glu.cu  global_norm.cu  grpo_loss.cu  kernel_utils.cuh  kernels.cpp  kernels.h  lmhead_compact.cu  lora_dropout.cu  lora_small_rank.cu  mamba_kernels.cu  mask_scatter.cu  matmul.cpp  matmul_plans.h  (+18 more)
csrc/src/kernels/gated_delta_rule/: gated_delta_rule_v2.cuh  gated_delta_rule_v2_bwd.cu  gated_delta_rule_v2_fwd.cu  gdr_chunk_bwd_phase1.cu  gdr_chunk_bwd_phase2.cu  gdr_chunk_bwd_phase3.cu  gdr_chunk_fwd_output.cu  gdr_chunk_fwd_precompute.cu  gdr_chunk_fwd_state.cu  gdr_fwd_launchers.h
csrc/src/kernels/moe/: moe_backward_dispatch.cu  moe_common.cuh  moe_diagnostics.cu  moe_dispatch_permute.cu  moe_expert_bias.cu  moe_fp8_grouped_gemm.cu  moe_fp8_wgrad_cutlass.cu  moe_fp8_wgrad_cutlass.h  moe_gpt_oss_activation.cu  moe_grouped_gemm_backward.cu  moe_grouped_gemm_core.cu  moe_grouped_gemm_expert.cu  moe_losses.cu  moe_routing_activation.cu  moe_topk.cu
csrc/src/models/: llama.cpp  llama.h  qwen25.cpp  qwen25.h  qwen3.cpp  qwen3.h  qwen3_moe.cpp  qwen3_moe.h  registry.cpp  registry.h
csrc/src/models/llama/: attention.h  config.h  llama.cpp  llama.h  llama_model.h  modules.h  rmsnorm.h  transformer_block.h  weight_mapping.h
csrc/src/models/nemotron_h/: config.h  nemotron_h.cpp  nemotron_h.h  nemotron_h_model.h  weight_mapping.h
csrc/src/models/qwen25/: attention.h  config.h  modules.h  qwen25.cpp  qwen25.h  qwen25_model.h  rmsnorm.h  transformer_block.h  weight_mapping.h
csrc/src/models/qwen3/: attention.h  config.h  modules.h  qwen3.cpp  qwen3.h  qwen3_model.h  rmsnorm.h  transformer_block.h  weight_mapping.h
csrc/src/models/qwen3moe/: config.h  qwen3_moe.cpp  qwen3_moe.h  qwen3_moe_block.h  qwen3_moe_model.h  (+2 more)
csrc/src/modules/: backward_hooks.h  forward_hooks.h  gradient_manager.h  matmul_context.h  model_config.h  model_factory.h  modular_model.h  module_concept.h  modules.h  optimizer_state.h  run_state.h  run_state_config.h  run_state_impl.tpp  run_state_types.h  weight_manager.h
csrc/src/recipes/: capability_predicates.h  recipe.cpp  recipe.h  recipe_factory.cpp  recipe_factory.h
csrc/src/serve/: native_http_server.cpp  native_http_server.h  scheduler.cpp  scheduler.h
csrc/src/testing/: test-bnb-quant.cpp  test-fast-lora-silu.cu  test-fp4.cu  test-heterogeneous.cu  test-matmul-plans.cu  test-modular-training-loop.cpp  test-moe.cu  test-nccl.cpp  test-normuon.cu  test-qlora.cu  test_moe.cpp  test_pretrained_config.cpp
csrc/src/tokenizer/: bpe.h  tok_profile.cpp  tok_profile.h  tokenizer.cpp  tokenizer.h  unicode.cpp  unicode.h  unicode_data.cpp
csrc/src/training/: logging.cpp  logging.h  model.cpp  model.h  runtime_options.h
csrc/src/utilities/: allocator.cpp  allocator.h  comm.cpp  comm.h  crash_handler.cpp  crash_handler.h  cu_file.cpp  cu_file.h  cu_file_fallback.cpp  dtype.cpp  dtype.h  gpu_info.h  gpu_info_nvml.cpp  lazy_allocator.cpp  lazy_allocator.h  philox.h  safetensors.cpp  safetensors.h  sol.cpp  sol.h  stack.cpp  stack.h  strided_iter.cuh  tensor.cpp  tensor.h  tensor_container.h  utils.cpp  utils.h  vec.cuh
environments/ruler-task/: README.md  pyproject.toml  ruler_task.py
(+1713 files in other folders)
