[project]
name = "surogate"
dynamic = ["version"]
description = "AgentOps Platform"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0"
license-files = ["LICENSE.AGPL-3.0"]
authors = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
maintainers = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
urls = { "Homepage" = "https://surogate.ai", "Repository" = "https://github.com/invergent-ai/surogate", "Issues" = "https://github.com/invergent-ai/surogate/issues" }
keywords = ["machine learning", "large language model", "agent"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "transformers>=5.3.0",
    "huggingface-hub>=1.4.1",
    "hf-transfer>=0.1.9",
    "datasets>=4.3.0",
    "addict",
    "peft",
    "json_repair",
    "unique-namer",
    "nanobind",
    "binpacking",
    "rich>=13.0.0",
    "psutil",
    "matplotlib",
    "pydantic",
    "densemax-lakefs-spec @ https://densemax.s3.eu-central-1.amazonaws.com/densemax_lakefs_spec-1.50.0-py3-none-any.whl",
    "densemax-lakefs-sdk @ https://densemax.s3.eu-central-1.amazonaws.com/densemax_lakefs_sdk-1.50.0-py3-none-any.whl",
    "sqlalchemy[asyncio]",
    "SQLAlchemy-Utils",
    "httpx>=0.27,<1.0",
    "torch",
    "dstack[all]==0.20.16",
    "prometheus-api-client",
    "aiosqlite",
    "starlette",
]
scripts = { "surogate" = "surogate.cli.main:cli_main" }

[tool.setuptools.packages.find]
include = ["surogate*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.1"

[tool.uv]
prerelease = "allow"
cache-keys = [
    { file = "pyproject.toml" },
    { file = "surogate/**/*.py" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
