[project]
name = "surogate"
dynamic = ["version"]
description = "AgentOps Platform"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0"
license-files = ["LICENSE.AGPL-3.0"]
authors = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
maintainers = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
urls = { "Homepage" = "https://surogate.ai", "Repository" = "https://github.com/invergent-ai/surogate", "Issues" = "https://github.com/invergent-ai/surogate/issues" }
keywords = ["machine learning", "large language model", "agent"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "transformers>=5.3.0",
    "huggingface-hub>=1.4.1",
    "hf-transfer>=0.1.9",
    "datasets>=4.3.0",
    "addict",
    "peft",
    "json_repair",
    "unique-namer",
    "nanobind",
    "binpacking",
    "rich>=13.0.0",
    "psutil",
    "matplotlib",
    "pydantic>=2.4,<3",
    "surogates @ https://github.com/invergent-ai/surogates/releases/download/v0.2/surogates-0.2-py3-none-any.whl",
    "densemax-lakefs-sdk @ https://github.com/invergent-ai/densemax-lakeFS/releases/download/v1.50.4/densemax_lakefs_sdk-1.50.4-py3-none-any.whl",
    "sqlalchemy[asyncio]",
    "SQLAlchemy-Utils",
    "httpx>=0.27,<1.0",
    "torch",
    "dstack[all]==0.20.16",
    "prometheus-api-client",
    "aiosqlite",
    "starlette",
]
scripts = { "surogate" = "surogate.cli.main:cli_main" }

[tool.setuptools.packages.find]
include = ["surogate*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.1"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.uv]
prerelease = "allow"
cache-keys = [
    { file = "pyproject.toml" },
    { file = "surogate/**/*.py" },
]
# dstack 0.20.x pins pydantic<2; we redirect its imports to pydantic.v1
# (shipped with pydantic v2) via a meta-path finder in surogate/__init__.py,
# so we override the pin to allow pydantic 2 to be installed.
override-dependencies = [
    "pydantic>=2.4,<3",
    "pydantic-duality>=1.2.4,<2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
