[project]
name = "surogate"
dynamic = ["version"]
description = "Surogate LLMOps Toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
maintainers = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
urls = { "Homepage" = "https://surogate.ai", "Repository" = "https://github.com/invergent-ai/surogate", "Issues" = "https://github.com/invergent-ai/surogate/issues" }
keywords = ["machine learning", "large language model"]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 13",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "transformers>=5.5.0",
    "huggingface-hub>=1.4.1",
    "hf-transfer>=0.1.9",
    "datasets>=4.3.0",
    "addict",
    "peft",
    "json_repair",
    "unique-namer",
    "nanobind",
    "binpacking",
    "rich>=13.0.0",
    "psutil",
    "matplotlib",
    "qwen-vl-utils==0.0.14",
    "ray>=2.5.0",
    "verifiers==0.1.11",
    "wandb==0.25.1",
    "jaxtyping",
    "aiolimiter",
    "openai==2.32.0"
]
scripts = { "surogate" = "surogate.cli.main:cli_main" }

[build-system]
requires = ["scikit-build-core>=0.11", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.1"

[tool.scikit-build]
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.py-api = "cp312"
wheel.packages = ["surogate"]
build.targets = ["_surogate"]
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
PYTHON_BINDING = "ON"
USE_CUFILE = "OFF"
CMAKE_CUDA_ARCHITECTURES = {env="CUDAARCHS"}

[tool.uv]
prerelease = "allow"
cache-keys = [
    { file = "pyproject.toml" },
    { file = "surogate/**/*.py" },
    { file = "CMakeLists.txt" },
    { file = "csrc/CMakeLists.txt" }
]
override-dependencies = [
    "triton",
    "torch",
    "vllm",
]

[project.entry-points."vllm.general_plugins"]
surogate = "surogate.grpo.inference.patches:transformers_v5_compat"

# ────────── Python formatter / linter ──────────
# Aligned with .clang-format for LLM/agent ergonomics: stable line boundaries,
# no aggressive re-flowing on edit, grep-friendly structure.
[tool.ruff]
line-length = 120                # matches .clang-format ColumnLimit
target-version = "py312"
extend-exclude = [
    "build",                     # scikit-build output
    ".venv",
    "csrc/build",
    "csrc/third_party",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false   # a trailing comma keeps items one-per-line,
                                    # which preserves grep targets and diff stability.
line-ending = "lf"

[tool.ruff.lint]
# Conservative default set. Style-heavy rules (like line-length W505) are OFF
# because the formatter handles whitespace; lint is for correctness bugs.
select = [
    "E",   # pycodestyle errors (indentation, whitespace correctness)
    "F",   # pyflakes (unused imports, undefined names)
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering) — deterministic insert slots for new imports
    "B",   # flake8-bugbear (likely bugs, e.g. mutable default args)
    "UP",  # pyupgrade (use modern syntax)
]
ignore = [
    "E501",  # line-too-long — formatter already handles it
    "E741",  # ambiguous single-letter names (e.g. `l`, `I`) — common in ML code
    "B008",  # function calls in argument defaults — common pattern with torch
    "B905",  # zip() without explicit strict= — not all call sites need strict
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]         # re-exports without use are intentional
"tests/**" = ["F401", "F811"]    # test fixtures often shadow/reimport
